# memory-agent

./: .gitignore  AGENTS.md  CLAUDE.md  MONITORING.md  README.md  db.py  llm.py  pyproject.toml  server.py  setup.py  test_integration.py  test_validation.py  tools.py
.codex/: hooks.json
docs/summaries/: 2026-05-22-hermes-memory-architecture.md  README.md
docs/superpowers/specs/: 2026-03-09-memory-agent-design.md
models/: __init__.py  consolidation.py  memory.py  options.py  types.py
scripts/: monitor_usage.py  next-chunk.sh
src/mcp_memory_agent/: __init__.py  db.py  hook_handler.py  hot.py  install.py  llm.py  server.py  tools.py
src/mcp_memory_agent/integrations/: __init__.py  claude.py  codex.py  common.py
src/mcp_memory_agent/models/: __init__.py  consolidation.py  memory.py  options.py  types.py
tests/: test_integration.py  test_validation.py
